feat: add experimental entity subscription filter
